# automated-rust-releases

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: release-plz.yml  release.yml
src/: main.rs
